@@ -22,3 +22,4 @@ depth: 1
  * Exclude tags from the reference index (Matt Westcott)
  * Fix errors in handling generic foreign keys when populating the reference index (Matt Westcott)
  * Prevent error in handling null ParentalKeys when populating the reference index (Matt Westcott)
+ * Make sure minimap error indicators follow the minimap scrolling (Thibaud Colas)
