@@ -51,6 +51,7 @@ depth: 1
  * Ensure new tooltips & tooltip menus have visible borders and tip triangle in Windows high-contrast mode (Juliet Adeboye)
  * Ensure there is a visual difference of 'active/current link' vs normal links in Windows high-contrast mode (Mohammad Areeb)
  * Avoid issues where trailing whitespace could be accidentally removed in translations for new page & snippet headers (Florian Vogt)
+ * Make sure minimap error indicators follow the minimap scrolling (Thibaud Colas)
 
 ## Upgrade considerations
 
