@@ -40,6 +40,7 @@ Changelog
  * Fix: Ensure new tooltips & tooltip menus have visible borders and tip triangle in Windows high-contrast mode (Juliet Adeboye)
  * Fix: Ensure there is a visual difference of 'active/current link' vs normal links in Windows high-contrast mode (Mohammad Areeb)
  * Fix: Avoid issues where trailing whitespace could be accidentally removed in translations for new page & snippet headers (Florian Vogt)
+ * Fix: Make sure minimap error indicators follow the minimap scrolling (Thibaud Colas)
 
 
 4.1.1 (xx.xx.xxxx) - IN DEVELOPMENT
@@ -52,6 +53,7 @@ Changelog
  * Fix: Exclude tags from the reference index (Matt Westcott)
  * Fix: Fix errors in handling generic foreign keys when populating the reference index (Matt Westcott)
  * Fix: Prevent error in handling null ParentalKeys when populating the reference index (Matt Westcott)
+ * Fix: Make sure minimap error indicators follow the minimap scrolling (Thibaud Colas)
 
 
 4.1 LTS (01.11.2022)
